version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/ExternalData/ColumnarDataSourceBase.rst.txt
.. vale off



:class:`ColumnarDataSourceBase`
===============================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.ExternalData.ColumnarDataSourceBase

   Bases: :py:obj:`object`


   
    is a class that provides foundational behavior for
   import settings that consume data from columnar data sources (such as delimited or
   fixed-width files).
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ColumnarDataSourceBase

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Clear`
            - 
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetEnumerator`
            - 
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~RemoveAt`
            - Removes the import definition at the specified index.
          * - :py:attr:`~ToString`
            - ToString method.
          * - :py:attr:`~UseColumn`
            - Add a column to be imported from the specified data source column index and configured


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Count`
            - Gets the number of column definitions.
          * - :py:attr:`~Format`
            - Gets the existing corresponding format.
          * - :py:attr:`~Item`
            - Item property.
          * - :py:attr:`~SkipFooter`
            - Gets or sets the number of rows to ignore at the end of the file during import.
          * - :py:attr:`~SkipRows`
            - Gets or sets the number of rows to skip over at the start of the file during import.







Property detail
---------------
.. py:property:: Count
   :type: Optional[int]


   
   Gets the number of column definitions.
















   ..
       !! processed by numpydoc !!

.. py:property:: Format
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.ExternalData.ImportFormat]


   
   Gets the existing corresponding format.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Ansys.Mechanical.ExternalData.ColumnarDataImportDefinition]


   
   Item property.
















   ..
       !! processed by numpydoc !!

.. py:property:: SkipFooter
   :type: Optional[int]


   
   Gets or sets the number of rows to ignore at the end of the file during import.
















   ..
       !! processed by numpydoc !!

.. py:property:: SkipRows
   :type: Optional[int]


   
   Gets or sets the number of rows to skip over at the start of the file during import.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Clear() -> None
   

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumerator() -> Iterator[Ansys.Mechanical.ExternalData.ColumnarDataImportDefinition]
   

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveAt(index: int) -> None

   
   Removes the import definition at the specified index.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!

.. py:method:: UseColumn(index: int, variableType: Ansys.Mechanical.DataModel.MechanicalEnums.ExternalData.VariableType, unit: str, name: str) -> Ansys.Mechanical.ExternalData.ColumnarDataSourceBase

.. code-block:: text

   Add a column to be imported from the specified data source column index and configured
   as the specified variable type. The order in which columns are added determines their
   order in the table/>.

   If unit is `null`, the default unit (in the active unit system) for the specified
   variable type will be assumed during import.

   If name is `null` or empty, a unique name will be generated from the specified
   variableType during import.

   A reference to the instance is returned so that invocations can be chained together.
..
       !! processed by numpydoc !!



.. vale on